Fix white space overhang on the right side of the website

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ body{
     line-height:18px;
     color:#333333;
     background-color:#ffffff;
+    overflow-x: hidden;
 }
 a{
     color:#0088cc;
